elk_stack_v8.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: yrca-logging

---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: filebeat
  namespace: yrca-logging

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: filebeat
rules:
- apiGroups: [""] 
  resources:
  - namespaces
  - pods
  - nodes
  verbs:
  - get
  - watch
  - list

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: filebeat
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: filebeat
subjects:
- kind: ServiceAccount
  name: filebeat
  namespace: yrca-logging

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: yrca-logging
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
        resources:
          limits:
            memory: 2Gi
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
        env:
          - name: discovery.type
            value: single-node
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: data
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "standard"
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: yrca-logging
spec:
  selector:
    app: elasticsearch
  ports:
    - protocol: TCP
      port: 9200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: yrca-logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.15.0
        env:
          - name: ELASTICSEARCH_HOSTS
            value: "elasticsearch:9200"
        volumeMounts:
        - name: config
          mountPath: /usr/share/logstash/pipeline/
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: logstash-config

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: logstash-config
  namespace: yrca-logging
data:
  logstash.conf: |-
    input {
      beats {
        port => 5044
      }
    }

    filter {
      json {
        source => "message"
      }
      mutate {
        rename => {
          "log" => "short_message"
          "stream" => "host"
        }
        add_field => {
          "version" => "1.1"
          "full_message" => "%{message}"
          "level" => "6"
        }
      }
      date {
        match => [ "time", "ISO8601" ]
        target => "timestamp"
      }
    }

    output {
      elasticsearch {
        hosts => "${ELASTICSEARCH_HOSTS}"
        index => "logstash-gelf-%{+YYYY.MM.dd}"
      }
    }

---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: yrca-logging
spec:
  selector:
    app: logstash
  ports:
    - protocol: TCP
      port: 5044

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: yrca-logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.15.0
        env:
          - name: ELASTICSEARCH_HOSTS
            value: "http://elasticsearch:9200"

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: yrca-logging
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: yrca-logging
spec:
  selector:
    matchLabels:
      app: filebeat
  template:
    metadata:
      labels:
        app: filebeat
    spec:
      serviceAccountName: filebeat
      terminationGracePeriodSeconds: 30
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:7.15.0
        args: [
          "-c", "/etc/filebeat/filebeat.yml",
          "-e",
        ]
        env:
        - name: LOGSTASH_HOSTS
          value: "logstash:5044"
        - name: KUBERNETES_NAMESPACE
          value: "yrca-deployment"
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        volumeMounts:
        volumeMounts:
        - name: config
          mountPath: /etc/filebeat
          readOnly: true
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: filebeat-config
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: filebeat-config
  namespace: yrca-logging
data:
  filebeat.yml: |-
    filebeat.autodiscover:
      providers:
        - type: kubernetes
          node: ${NODE_NAME}
          templates:
            - condition:
                equals:
                  kubernetes.namespace: ${KUBERNETES_NAMESPACE}
              config:
                - type: container
                  paths:
                    - /var/lib/docker/containers/${data.kubernetes.container.id}/*.log
    output.logstash:
      hosts: ['${LOGSTASH_HOSTS}']
