namespace_template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yrca-deployment
  labels:
    istio-injection: enabled
    usergroup: yrca
    istio.io/rev: yrca
